--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             <div id="slideshow" class="slideshow" style="margin-top:12px;">
                 <div class="slides" id="slides">
                     <!-- Ganti src sesuai folder asset/images kamu -->
-                    <img class="slide" src="../asset/images/AE86.jpg" alt="Foto 1">
-                    <img class="slide" src="../asset/images/RX-7 FD.jpg" alt="Foto 2">
-                    <img class="slide" src="../asset/images/R32W.jpg" alt="Foto 3">
-                    <img class="slide" src="../asset/images/Devilz.jpg" alt="Foto 4">
-                    <img class="slide" src="../asset/images/blackbird.jpg" alt="Foto 5">
+                    <img class="slide" src="asset/images/AE86.jpg" alt="Foto 1">
+                    <img class="slide" src="asset/images/RX-7 FD.jpg" alt="Foto 2">
+                    <img class="slide" src="asset/images/R32W.jpg" alt="Foto 3">
+                    <img class="slide" src="asset/images/Devilz.jpg" alt="Foto 4">
+                    <img class="slide" src="asset/images/blackbird.jpg" alt="Foto 5">
                 </div>
 
                 <div class="controls-row">
@@ -98,5 +98,6 @@
         <p>© 2025 - ReeTempest</p>
     </footer>
 </body>
+
 
 </html>
